Cantor: The Civilization of the Middle Ages.

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -884,6 +884,10 @@
             <a href="https://yalebooks.yale.edu/book/9780300002300/making-middle-ages"><abbr>ISBN</abbr> 9780300002300</a>.
             <!--Wikipedia: "Southern is one of 20 medieval scholars profiled in Norman Cantor's Inventing the Middle Ages: The Lives, Works and Ideas of the Great Medievalists of the Twentieth Century."-->
           </li>
+          <li><a href="https://en.wikipedia.org/wiki/Norman_Cantor">Cantor, Norman F.</a>:
+            <i class="booktitle">The Civilization of the Middle Ages</i>. Reprinted HarperCollins, 1994.
+            <a href="https://www.harpercollins.com/books/9780060925536"><abbr>ISBN</abbr> 9780060925536</a>.
+          </li>
         </ul>
       </li>
     </ul>
