Wickham: Framing the Early Middle Ages.

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -888,6 +888,10 @@
             <i class="booktitle">The Civilization of the Middle Ages</i>. Reprinted HarperCollins, 1994.
             <a href="https://www.harpercollins.com/books/9780060925536"><abbr>ISBN</abbr> 9780060925536</a>.
           </li>
+          <li><a href="https://en.wikipedia.org/wiki/Christopher_Wickham">Wickham, Christopher</a>:
+            <i class="booktitle">Framing the Early Middle Ages: Europe and the Mediterranean 400–800</i>. 2005.
+            <br /><i class="booktitle">The Inheritance of Rome: A History of Europe from 400 to 1000</i>. 2009.
+          </li>
         </ul>
       </li>
     </ul>
