Benjamin: How Schopenhauer's thought can ...

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1403,6 +1403,10 @@
         <i class="blog">The Useless Tree</i>, 16.11.2017.
       </li>
       <!--Dabashi, Hamid: Can Non-Europeans Think? Zed Books, 2015-->
+      <li>Benjamin, Marina:
+        <a href="https://aeon.co/ideas/how-schopenhauers-thought-can-illuminate-a-midlife-crisis">How Schopenhauer’s thought can illuminate a midlife crisis</a>,
+        <i class="website">Aeon</i>, 26.01.2018. (Licence: Creative Commons Attribution No Derivatives (<abbr>CC-BY-ND</abbr>.)
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
