--- a/lijst.html
+++ b/lijst.html
@@ -526,7 +526,7 @@
       <a href="https://www.penguin.co.uk/books/283003/russian-emigre-short-stories-from-bunin-to-yanovsky/"><abbr>ISBN</abbr> 978 0241310908</a>.
     </li>
     <li><a href="https://en.wikipedia.org/wiki/Richard_D._Alexander">Alexander, Richard D.: 
-      <strong><i class="booktitle">The Biology of Moral Systems</i></strong>. 1987. 
+      <strong><i class="booktitle">The Biology of Moral Systems</i></strong>. 1987.
       (Routledge: <a href="https://www.routledge.com/The-Biology-of-Moral-Systems/Alexander/p/book/9780202011745"><abbr>ISBN</abbr> 9780202011745</a>).
       <!--See also 
         * Richard D. Alexander: "A Biological Interpretation of Moral Systems", Journal of Religion & Science, 1985. http://onlinelibrary.wiley.com/doi/10.1111/j.1467-9744.1985.tb00574.x/abstract
@@ -543,9 +543,10 @@
     </li>
     -->
   </ul>
-  <!-- 
+  <!--
     * Wasserstrom & Cunningham: China in the 21st Century: What Everyone Needs to Know. Third edition. OUP, April 2018: https://global.oup.com/academic/product/china-in-the-21st-century-9780190659080 
-    * Christopher Goscha: Vietnam: A New History. Little, Brown & co. / Hachette, 2016 (592 pages) ISBN 9780465094370. https://www.hachettebookgroup.com/titles/christopher-goscha/vietnam/9780465094370/ 
+    * Christopher Goscha: Vietnam: A New History. Little, Brown & co. / Hachette, 2016 (592 pages) ISBN 9780465094370. https://www.hachettebookgroup.com/titles/christopher-goscha/vietnam/9780465094370/
+    * Evan Osnos: Große @@
   -->
   <!--Hergé & Tintin:
     * Benoît Peeters: Hergé, fils de Tintin. Flammarion, 2016.
