Edraki on CRISPR

--- a/science/index.html
+++ b/science/index.html
@@ -1104,6 +1104,11 @@
         The journal also has a YouTube channel:
         <a href="https://www.youtube.com/channel/UCqat2W58ow0lJN0rKnlZ7Dw">Public Understanding of Science Blog</a>.
       </li>
+      <li>Edraki, Alireza:
+        <a href="https://massivesci.com/articles/crispr-cas1-cas2-ihf-explainer/">A biologist writes the <abbr>CRISPR</abbr> explainer you’ve been looking for</a>,
+        <i class="website">Massive</i>, 28.08.2017.
+        <!--@@PDF-->
+      </li>
     </ul>
   </main>
 
