Turkle: Alone Together (2011).

--- a/lijst.html
+++ b/lijst.html
@@ -528,11 +528,17 @@
     <li><a href="https://en.wikipedia.org/wiki/Richard_D._Alexander">Alexander, Richard D.: 
       <strong><i class="booktitle">The Biology of Moral Systems</i></strong>. 1987.
       (Routledge: <a href="https://www.routledge.com/The-Biology-of-Moral-Systems/Alexander/p/book/9780202011745"><abbr>ISBN</abbr> 9780202011745</a>).
-      <!--See also 
+      <!--See also
         * Richard D. Alexander: "A Biological Interpretation of Moral Systems", Journal of Religion & Science, 1985. http://onlinelibrary.wiley.com/doi/10.1111/j.1467-9744.1985.tb00574.x/abstract
         * Price, Michael E.: "What Should the Function of Morality Be?", From Darwin to Eternity, Psychology Today, 06.02.2014: https://www.psychologytoday.com/blog/darwin-eternity/201402/what-should-the-function-morality-be 
         * Refs in article at https://rd.springer.com/article/10.1007/BF00144037 
       -->
+    </li>
+    <li><a href="https://en.wikipedia.org/wiki/Sherry_Turkle">Turkle, Sherry</a>: 
+      <a href="https://sherryturkle.com/books-research/alone-together/"><i class="booktitle">Alone Together: Why We Expect More from Technology and Less from Each Other</i></a>.
+      Basic Books, 2011. (400 pages)
+      <a href="https://www.basicbooks.com/titles/sherry-turkle/alone-together/9780465093663/"><abbr>ISBN</abbr> 9780465093663</a>.
+      <!--See also YouTube-->
     </li>
     <!--
     <li> : <i class="booktitle"></i>. 
