--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -316,6 +316,10 @@
         <i class="blog">Towards Data Science</i>, 30.10.2017.
       </li>
       <!--BMBF: Innovationsschub mit Künstlicher Intelligenz, 12.09.2017: https://www.bmbf.de/de/innovationsschub-mit-kuenstlicher-intelligenz-4781.html -->
+      <li>Haas, Peter:
+        <a href="https://www.youtube.com/watch?v=TRzBk_KuIaM">The Real Reason to be Afraid of Artificial Intelligence</a>:
+        presentation at TEDxDirigo (YouTube, 13 minutes, 15.12.2017).
+      </li>
       <li>Upson, Sandra:
         <a href="https://www.wired.com/story/future-of-artificial-intelligence-2018/?mbid=social_twitter_onsiteshare">Artificial Intelligence Is Killing the Uncanny Valley and Our Grasp on Reality</a>,
         <i class="website">Wired</i>, 16.12.2017.
