Science Day 1: links to videos.

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -67,10 +67,10 @@
       <li><a href="http://events.mi.hdm-stuttgart.de/2012-12-21-science-day">1st Science Day</a>,
         21 December 2012. Topics:
         <ul>
-          <li>History of the Universe (<span lang="de">Andreas Stiegler</span>, 96 minutes, in German),</li>
-          <li>A Visit to Bletchley Park (<span lang="de">Roland Schmitz</span>, 75 minutes, in German),</li>
-          <li>Going to the Theatre in Shakespeare's Time (<span lang="nl">Christophe Strobbe</span>, 46 minutes, in English),</li>
-          <li>Galactic Inventory (<span lang="de">Andreas Stiegler</span>, 55 minutes, in German).</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2012-12-21-science-day/history-of-the-universe">History of the Universe</a> (<span lang="de">Andreas Stiegler</span>, 96 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2012-12-21-science-day/a-visit-to-bletchley-park">A Visit to Bletchley Park</a> (<span lang="de">Roland Schmitz</span>, 75 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2012-12-21-science-day/going-to-the-theater-in-shakespeare-s-time">Going to the Theatre in Shakespeare's Time</a> (<span lang="nl">Christophe Strobbe</span>, 46 minutes, in English),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2012-12-21-science-day/galactic-inventory">Galactic Inventory</a> (<span lang="de">Andreas Stiegler</span>, 55 minutes, in German).</li>
         </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-06-21-scienceday">2nd Science Day</a>,
