Carmel: Consciousness for beginners

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1407,6 +1407,30 @@
         <a href="https://aeon.co/ideas/how-schopenhauers-thought-can-illuminate-a-midlife-crisis">How Schopenhauer’s thought can illuminate a midlife crisis</a>,
         <i class="website">Aeon</i>, 26.01.2018. (Licence: Creative Commons Attribution No Derivatives (<abbr>CC-BY-ND</abbr>.)
       </li>
+      <li>Carmel, David:
+        <a href="https://fivebooks.com/best-books/consciousness-david-carmel/">Consciousness for Beginners: the best book, articles and one video</a>,
+        <i class="website">Five Books</i>, January 2018. The recommendations are:
+        <ul>
+          <li>Papineau, David; Selina, Howard:
+            <i class="booktitle">Introducing Consciousness: A Graphic Guide</i>. [1996] Icon Books / Allen &amp; Unwin, 2010. 
+            <a href="https://www.allenandunwin.com/browse/books/general-books/psychology/Introducing-Consciousness-David-Papineau-and-Howard-Selina-9781848311718"><abbr>ISBN</abbr> 9781848311718</a>.
+          </li>
+          <li>Owen, David, et al.:
+            <a href="http://science.sciencemag.org/content/313/5792/1402">Detecting Awareness in the Vegetative State</a>,
+            <i class="journal">Science</i>, <abbr>Vol.</abbr> 313, Issue 5792, <abbr>pp.</abbr> 1402 (September 2006).
+            <!--See also http://www.coma.ulg.ac.be/papers/vs/VS_science2006.pdf & http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0049933 -->
+          </li>
+          <li>Chabris, Christopher; Simons, Daniel:
+            <a href="http://viscog.beckman.illinois.edu/flashmovie/15.php">Selective attention test</a>
+            (video; the infamous invisible gorilla).
+          </li>
+          <li>Johansson, Petter; Hall, Lars; Sikström, Sverker; Olsson, Andreas:
+            <a href="http://science.sciencemag.org/content/310/5745/116.full">Failure to detect mismatches between intention and outcome in a simple decision task</a>,
+            <i class="journal">Science</i>, 310 (5745):116-119 (2005).
+            <!--See also http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0058254 & https://philpapers.org/rec/JOHCBT-3 -->
+          </li>
+        </ul>
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
