AI in chess: AlphaZero.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -336,6 +336,18 @@
         <i class="blog">Microsoft: The <abbr>AI</abbr> Blog</i>, 15.01.2018.
       </li>
     </ul>
+    <p>Artificial Intelligence in chess:</p>
+    <ul>
+      <li>McGourty, Colin:
+        <a href="https://chess24.com/en/read/news/deepmind-s-alphazero-crushes-chess">DeepMind’s AlphaZero crushes chess</a>,
+        <i class="website">Chess24</i>, 06.12.2017. Quote:
+        <q> The AlphaZero algorithm developed by Google and DeepMind took just four hours of playing against itself to synthesise the chess knowledge of one and a half millennium and reach a level where it not only surpassed humans but crushed the reigning World Computer Champion Stockfish 28 wins to 0 in a 100-game match.</q>
+      </li>
+      <li>Silver, David; Hubert, Thomas; Schrittwieser, Julian; Antonoglou, Ioannis; Lai, Matthew; Guez, Arthur; Lanctot, Marc; Sifre, Laurent; Kumaran, Dharshan; Graepel, Thore; Lillicrap, Timothy; Simonyan, Karen; Hassabis, Demis:
+        <a href="https://arxiv.org/pdf/1712.01815.pdf">Mastering Chess and Shogi by Self-Play with a General Reinforcement Learning Algorithm</a>,
+        arXiv, 05.12.2017.
+      </li>
+    </ul>
 
   </main>
 
