Springer: The Discourse of Neoliberalism.

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1847,6 +1847,11 @@
         <i class="booktitle">Neoliberalismus. Ungleichheit als Programm</i>. Unrast Verlag, 2013.
         <a href="https://www.unrast-verlag.de/gesamtprogramm/allgemeines-programm/politik-gesellschaft/neoliberalismus-414-detail"><abbr>ISBN</abbr> 978-3-89771-534-9</a>.
       </li>
+      <li>Springer, Simon:
+        <i class="booktitle">The Discourse of Neoliberalism. An Anatomy of a Powerful Idea</i>.
+        Rowman &amp; Littlefield International, 2016. (176 pages)
+        <a href="https://rowman.com/ISBN/9781783486533/The-Discourse-of-Neoliberalism-An-Anatomy-of-a-Powerful-Idea"><abbr>ISBN</abbr> 978-1-78348-652-6</a>.
+      </li>
       <li lang="de">Lobbypedia:
         <a href="https://lobbypedia.de/wiki/Neoliberalismus">Neoliberalismus</a>.
       </li>
