--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -92,9 +92,9 @@
       <li><a href="http://events.mi.hdm-stuttgart.de/2014-05-09-scienceday">4th Science Day</a>,
         9 May 2014. Topics:
         <ul>
-          <li>Game Physics: <span lang="de">Fussball (Roland Schmitz</span>, 47 minutes, in German),</li>
-          <li>Why Mandarin Is So Damn Hard to Learn (<span lang="nl">Christophe Strobbe</span>, 85 minutes, in English),</li>
-          <li>Black Holes (<span lang="de">Andreas Stiegler</span>, 137 minutes, in German).</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2014-05-09-scienceday/game-physics-fussball">Game Physics: <span lang="de">Fussball</span> (Roland Schmitz</span>, 47 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2014-05-09-scienceday/why-mandarin-is-so-damn-hard-to-learn">Why Mandarin Is So Damn Hard to Learn</a> (<span lang="nl">Christophe Strobbe</span>, 85 minutes, in English),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2014-05-09-scienceday/black-holes">Black Holes</a> (<span lang="de">Andreas Stiegler</span>, 137 minutes, in German).</li>
         </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2014-12-12-science-day">5th Science Day</a>,
