William Vorhies: series on recommender systems.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -335,6 +335,26 @@
         <a href="https://blogs.microsoft.com/ai/microsoft-creates-ai-can-read-document-answer-questions-well-person/">Microsoft creates <abbr>AI</abbr> that can read a document and answer questions about it as well as a person</a>,
         <i class="blog">Microsoft: The <abbr>AI</abbr> Blog</i>, 15.01.2018.
       </li>
+      <li>Recommender systems:
+        <ul>
+          <li>Vorhies, William:
+            <a href="https://www.datasciencecentral.com/profiles/blogs/understanding-and-selecting-recommenders-1">Understanding and Selecting Recommenders</a>,
+            <i class="blog">Data Science Central blog</i>, 10.01.2017.
+          </li>
+          <li>Vorhies, William:
+            <a href="https://www.datasciencecentral.com/profiles/blogs/5-types-of-recommenders">5 Types of Recommenders</a>,
+            <i class="blog">Data Science Central blog</i>, 17.01.2017.
+          </li>
+          <li>Vorhies, William:
+            <a href="https://www.datasciencecentral.com/profiles/blogs/recommenders-packaged-solutions-or-home-grown">Recommenders: Packaged Solutions or Home Grown</a>,
+            <i class="blog">Data Science Central blog</i>, 24.01.2017.
+          </li>
+          <li>Vorhies, William:
+            <a href="https://www.datasciencecentral.com/profiles/blogs/deep-learning-and-recommenders">Deep Learning and Recommenders</a>,
+            <i class="blog">Data Science Central blog</i>, 31.01.2017.
+          </li>
+        </ul>
+      </li>
     </ul>
 
     <p>Artificial Intelligence in chess:</p>
