Tietz: Ludwik Fleck and the Thought Collective.

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -744,6 +744,10 @@
         <a href="http://docslide.nl/education/actor-netwerk-theorie-in-de-sociale-wetenschappen.html">De sociale participatie van objecten: Bruno Latour en actor-network theorie (<abbr>ANT</abbr>) in de sociale wetenschappen</a>,
         Rijksuniversiteit Groningen, 7 december 2010.
       </li>
+      <li>Tietz, Tabea:
+        <a href="http://scihi.org/ludwik-fleck-thought-collective/">Ludwik Fleck and the Thought Collective</a>,
+        <i class="blog">SciHi Blog</i>, 11.07.2017.
+      </li>
       <li lang="nl">van der Meer, J. M.:
         <a href="http://www.digibron.nl/search/detail/78dc926573ebfafb7688214cb48e55ce/drie-studies-over-buitenwetenschappelijke-invloeden-in-de-geschiedenis-van-biologische-en-astronomische-idee-n">Drie studies over 'buitenwetenschappelijke' invloeden in de geschiedenis van biologische en astronomische ideeën</a>,
         <i class="magazine">Radix</i>, 1 april 1981, pp. 4 - 24 (<i class="website">Digibron.nl</i>).
