Grolimund: Resonanz schlägt Logik

--- a/philscience/fleck_ludwik.html
+++ b/philscience/fleck_ludwik.html
@@ -873,6 +873,10 @@
         <i class="proceedings">International Weigl Conference (Microorganisms in Pathogenesis and their Drug Resistance - Programme and Abstracts</i>,
         edited by R. Stoika et al., 11-14 September 2003, pp. 10-31.
       </li>
+      <li lang="de">Grolimund, Remo:
+        <a href="https://shocknawe.hypotheses.org/510" hreflang="de">Resonanz schlägt Logik (?) – Tribale Epistemologien</a>,
+        <i class="blog" lang="en">Shock and Awe</i>, 25.10.2017.
+      </li>
     </ul>
   </main>
 
