Kemasingki: Nigel Warburton

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1431,6 +1431,10 @@
           </li>
         </ul>
       </li>
+      <li>Kemasingki, Pim:
+        <a href="http://www.chiangmaicitylife.com/citylife-articles/seeking-answers-philosopher-nigel-warburton/">Seeking Answers with Philosopher Nigel Warburton</a>,
+        <i class="website">Citylife Chiang Mai</i>, 01.02.2018.
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
