+h2: Ethics in Scientific Research

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -110,6 +110,21 @@
       </li>
     </ul>
 
+    <h2>Ethics in Scientific Research</h2>
+    <ul>
+      <li>Singer, Peter: 
+        <a href="https://www.project-syndicate.org/commentary/volkswagen-monkey-experiments-backlash-by-peter-singer-2018-02">Volkswagen’s Monkeys</a>,
+        <i class="website">Project Syndicate</i>, 05.02.2018.
+      </li>
+      <li>Resnik, David B.:
+        <a href="https://www.niehs.nih.gov/research/resources/bioethics/whatis/index.cfm">What is Ethics in Research &amp; Why is it Important?</a>,
+        <i class="website">National Institute of Environmental Health Sciences (<abbr>USA</abbr>)</i>, 01.12.2015. 
+      </li>
+      <li>Ethicsweb:
+        <a href="http://www.ethicsweb.eu/node/122">What is ethics in science?</a>
+      </li>
+      <!--@@ https://duckduckgo.com/?q=ethics+science+research&ia=web -->
+    </ul>
   </main>
 
   <footer>
