Rodewald: Ihr Wegweiser zur rationalen ...

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -313,6 +313,11 @@
         <a href="http://www.abc.es/ciencia/20150626/abci-gente-piensa-descubren-201506261119.html" hreflang="es" lang="es">Un 90% de la población mundial no sabe pensar</a>,
         <i class="website"><abbr>ABC</abbr></i>, 26.06.2015.
       </li>
+      <li lang="de">Rodewald, Bernd:
+        <i class="booktitle">Ihr Wegweiser zu rationalen Analysen und Entscheidungen. Wie man Fehler vermeidet und die richtigen Schlüsse zieht</i>.
+        Wiley-<abbr>VCH</abbr> Verlag, 2017.
+        <a href="http://www.wiley-vch.de/de/fachgebiete/finanzen-wirtschaft-recht/wirtschaft-und-management-13ba/wirtschaft-u-gesellschaft-13ba7/ihr-wegweiser-zu-rationalen-analysen-und-entscheidungen-978-3-89578-466-8"><abbr>ISBN</abbr> 978-3-89578-466-8</a>.
+      </li>
     </ul>
   </main>
 
