Wikipedia: Spherical Earth.

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -772,6 +772,9 @@
             <a href="https://en.wikipedia.org/wiki/Flammarion_engraving">Flammarion engraving</a>
             (unknown artist, 1888).
           </li>
+          <li>Wikipedia:
+            <a href="https://en.wikipedia.org/wiki/Spherical_Earth">Spherical Earth</a>.
+          </li>
           <li>
             <a href="http://www.dailymail.co.uk/news/article-2005461/Rare-map-flat-Earth-donated-Library-Congress.html">Unearthed! One-of-a-kind map showing a flat Earth is donated to Library of Congress</a>,
             <i class="newspaper">Daily Mail</i>, 19.06.2011.
