Wolff: Best books on political philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1439,6 +1439,31 @@
           </li>
         </ul>
       </li>
+      <li>Wolff, Jonathan:
+        <a href="https://fivebooks.com/best-books/jonathan-wolff-on-political-philosophy/">The best books on Political Philosophy</a>,
+        <i class="website">Five Books</i>, February 2018. The recommendations are:
+        <ul>
+          <li>Hobbes, Thomas:
+            <a href="https://en.wikipedia.org/wiki/Leviathan_(Hobbes_book)"><i class="booktitle">Leviatan</i></a> (1651).
+          </li>
+          <li>Marx, Karl:
+            <i class="booktitle">Early Writings</i> (especially the 1844 manuscripts).
+          </li>
+          <li>Rawls, John:
+            <i class="booktitle">A Theory of Justice</i>. Revised edition. Harvard University Press, 1999. (560 pages)
+            <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674000780"><abbr>ISBN</abbr> 9780674000780</a>.
+            (<a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674017726">Original edition, 1971</a>.)
+          </li>
+          <li>Nozick, Robert:
+            <a href="https://en.wikipedia.org/wiki/Anarchy,_State,_and_Utopia"><i class="booktitle">Anarchy, State, and Utopia</i></a>. [1974]. Basic Books, 2013. (400 pages)
+            <a href="https://www.basicbooks.com/titles/robert-nozick/anarchy-state-and-utopia/9780465051007/"><abbr>ISBN</abbr> 9780465051007</a>.
+          </li>
+          <li><a href="https://en.wikipedia.org/wiki/Gerald_Cohen">Cohen, Gerald</a>:
+            <i class="booktitle">If You’re an Egalitarian, How Come You’re So Rich?</i>. Harvard University Press, 2001. (256 pages)
+            <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674006935"><abbr>ISBN</abbr> 9780674006935</a>.
+          </li>
+        </ul>
+      </li>
       <li>Kemasingki, Pim:
         <a href="http://www.chiangmaicitylife.com/citylife-articles/seeking-answers-philosopher-nigel-warburton/">Seeking Answers with Philosopher Nigel Warburton</a>,
         <i class="website">Citylife Chiang Mai</i>, 01.02.2018.
