Sorabji: Gandhi the philosopher

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1468,6 +1468,10 @@
         <a href="http://www.chiangmaicitylife.com/citylife-articles/seeking-answers-philosopher-nigel-warburton/">Seeking Answers with Philosopher Nigel Warburton</a>,
         <i class="website">Citylife Chiang Mai</i>, 01.02.2018.
       </li>
+      <li>Sorabji, Richard:
+        <a href="https://aeon.co/essays/gandhi-was-a-subtle-surprising-philosopher-in-the-stoic-style">Gandhi the philosopher</a>,
+        <i class="magazine">Aeon</i>, 12.11.2017.
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
