--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -153,7 +153,7 @@
     <ul>
       <li lang="de">Conradt, Michael:
         <a href="https://www.youtube.com/watch?v=-jaWsJDcXu4">Die Welt ist Geist – Georg Wilhelm Friedrich Hegel</a>
-        (<span lang="en">YouTube, 23 minutes, 04.06.2014).
+        (<span lang="en">YouTube, 23 minutes, 04.06.2014</span>).
       </li>
       <li>The School of Life:
         <a href="https://www.youtube.com/watch?v=H5JGE3lhuNo">Philosophy – Hegel</a>
