MatoJelic: truth about match revealed
MatoJelic: "The Truth About The Match Revealed: AlphaZero vs Stockfish"
(YT).

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -291,7 +291,7 @@
       </li>
       <li>Knight, Will:
         <a href="https://www.technologyreview.com/s/609038/chinas-ai-awakening/">China's <abbr>AI</abbr> Awakening</a>,
-        <i class="magzine"><abbr>MIT</abbr> Technology Review, 10.10.2017.
+        <i class="magazine"><abbr>MIT</abbr> Technology Review</i>, 10.10.2017.
       </li>
       <li>Matsakis, Louise:
         <a href="https://motherboard.vice.com/en_us/article/59ydmx/copyright-law-artificial-intelligence-bias">Copyright Law Makes Artificial Intelligence Bias Worse. But it could be used to help fix the problem too</a>,
@@ -307,7 +307,7 @@
       </li>
       <li>Knight, Will:
         <a href="https://www.technologyreview.com/s/609610/the-us-leads-in-artificial-intelligence-but-for-how-long/">The U.S. Leads in Artificial Intelligence, but for How Long?</a>,
-        <i class="magzine"><abbr>MIT</abbr> Technology Review, 06.12.2017.
+        <i class="magazine"><abbr>MIT</abbr> Technology Review</i>, 06.12.2017.
       </li>
       <li>Dockrill, Peter:
         <a href="https://futurism.com/4-hours-googles-ai-mastered-chess-knowledge-history/">In Just 4 Hours, Google’s <abbr>AI</abbr> Mastered All The Chess Knowledge in History</a>,
@@ -340,6 +340,10 @@
         <a href="https://blogs.microsoft.com/ai/microsoft-creates-ai-can-read-document-answer-questions-well-person/">Microsoft creates <abbr>AI</abbr> that can read a document and answer questions about it as well as a person</a>,
         <i class="blog">Microsoft: The <abbr>AI</abbr> Blog</i>, 15.01.2018.
       </li>
+    </ul>
+
+    <h3>Introductory Articles and Materials</h3>
+    <ul>
       <li>Recommender systems:
         <ul>
           <li>Vorhies, William:
@@ -362,7 +366,8 @@
       </li>
     </ul>
 
-    <p>Artificial Intelligence in chess:</p>
+
+    <h3>Artificial Intelligence in Chess</h3>
     <ul>
       <li>McGourty, Colin:
         <a href="https://chess24.com/en/read/news/deepmind-s-alphazero-crushes-chess">DeepMind’s AlphaZero crushes chess</a>,
@@ -399,6 +404,12 @@
       <li>Mauboussin, Andrew:
         <a href="https://medium.com/@amaub/alphazero-and-the-curse-of-human-knowledge-324a3a0ad1b6">AlphaZero and the Curse of Human Knowledge</a>,
         <i class="blog">Medium</i>, 22.01.2018.
+      </li>
+      <li>MatoJelic:
+        <a href="https://www.youtube.com/watch?v=QGmM1VTAmhg">The Truth About The Match Revealed: AlphaZero vs Stockfish</a>
+        (YouTube, 8 minutes, 10.12.2017): brief analysis of one of the games (French Defense: Steinitz Variation (C11)),
+        after which Mato comments that the version of Stockfish used in the match would also loose against the other
+        top engines, such as Komodo, Houdini and Rybka.
       </li>
       <li><a href="https://chess.stackexchange.com/q/19353/10867">Understanding AlphaZero</a>,
         a question on Chess Stack Exchange.
