+h3: AI and Health/Healthcare

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -366,6 +366,24 @@
       </li>
     </ul>
 
+    <h3>Artificial Intelligence and Health (and Healthcare)</h3>
+    <ul>
+      <li>Horgan, Lydie:
+        <a href="https://www.re-work.co/blog/could-an-ai-bot-solve-emotional-weight-gain">Could an <abbr>AI</abbr> bot solve emotional weight gain?</a>,
+        <i class="blog">Re-Work blog</i>, 10.10.2017.
+      </li>
+      <li>Pollitt, Katie:
+        <a href="https://www.re-work.co/blog/can-ai-make-personalised-healthcare-affordable">Can <abbr>AI</abbr> Make Personalised Healthcare Affordable?</a>,
+        <i class="blog">Re-Work blog</i>, 08.11.2017. See also Alexandre Le Bouthiller's presentation 
+        <a href="http://videos.re-work.co/videos/663-imaging-precision-medicine-beyond-deep-learning-models">Imaging Precision Medicine, Beyond Deep Learning models</a>.
+      </li>
+      <li>Summers, Rebecca:
+        <a href="https://www.re-work.co/blog/ai-is-disrupting-healthcare-and-saving-lives">How AI is disrupting healthcare and saving lives</a>,
+        <i class="blog">Re-Work blog</i>, 14.11.2017.
+        (Mainly an announcement of a &ldquo;Women in <abbr>AI</abbr> in Healtcare Dinner&rdquo; (22.11.2017) with
+        Laura Douglas (Research Scientist at Babylon Health), Yinyin Yuan (Institute of Cancer Research) and Farideh Jalali (University of Manchester).)
+      </li>
+    </ul>
 
     <h3>Artificial Intelligence in Chess</h3>
     <ul>
