Shaw: Top 10 Machine Learning Algorithms ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -364,6 +364,10 @@
           </li>
         </ul>
       </li>
+      <li>Shaw, Reena:
+        <a href="https://www.re-work.co/blog/top-10-machine-learning-algorithms-for-beginners">Top 10 Machine Learning Algorithms for Beginners</a>,
+        <i class="blog">Re-Work blog</i>, 08.12.2017.
+      </li>
     </ul>
 
     <h3>Artificial Intelligence and Health (and Healthcare)</h3>
