How: As Our AI Systems Become More Capable ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -226,6 +226,10 @@
         <i class="website">World Economic Forum</i>, 21.01.2018.
         <!--@@PDF-->
       </li>
+      <li>How, Yazmin:
+        <a href="https://www.re-work.co/blog/as-our-ai-systems-become-more-capable-should-ethics-be-an-integral-component-to-your-business-strategy">As Our <abbr>AI</abbr> Systems Become More Capable, Should Ethics be an Integral Component to your Business Strategy?</a>,
+        <i class="blog">Re-Work blog</i>, 02.02.2018.
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
