Karlin: Deploying AI responsibly in government

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -230,6 +230,12 @@
         <a href="https://www.re-work.co/blog/as-our-ai-systems-become-more-capable-should-ethics-be-an-integral-component-to-your-business-strategy">As Our <abbr>AI</abbr> Systems Become More Capable, Should Ethics be an Integral Component to your Business Strategy?</a>,
         <i class="blog">Re-Work blog</i>, 02.02.2018.
       </li>
+      <li>Karlin, Michael:
+        <a href="http://policyoptions.irpp.org/magazines/february-2018/deploying-ai-responsibly-in-government/">Deploying <abbr>AI</abbr> responsibly in government</a>,
+        <i class="magazine">Policy Options</i>, 06.02.2018.
+        <br />This article is part of a special feature on
+        <a href="http://policyoptions.irpp.org/magazines/january-2018/ethical-and-social-dimensions-of-ai/">Ethical and Social Dimensions of <abbr>AI</abbr></a>.
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
