Science Day June 2013 direct links

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -76,9 +76,9 @@
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-06-21-scienceday">2nd Science Day</a>,
         21 June 2013. Topics:
         <ul>
-          <li>Final Frontiers (<span lang="de">Andreas Stiegler</span>, 48 minutes, in German),</li>
-          <li>The Universe (<span lang="de">Andreas Stiegler</span>, 53 minutes, in German),</li>
-          <li>The &ldquo;Great&rdquo; Walls of China (<span lang="nl">Christophe Strobbe</span>, 65 minutes, in English).</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2013-06-21-scienceday/final-frontiers">Final Frontiers</a> (<span lang="de">Andreas Stiegler</span>, 48 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2013-06-21-scienceday/the-universe">The Universe</a> (<span lang="de">Andreas Stiegler</span>, 53 minutes, in German),</li>
+          <li><a href="http://events.mi.hdm-stuttgart.de/2013-06-21-scienceday/the-great-walls-of-china">The &ldquo;Great&rdquo; Walls of China</a> (<span lang="nl">Christophe Strobbe</span>, 65 minutes, in English).</li>
         </ul>
       </li>
       <li><a href="http://events.mi.hdm-stuttgart.de/2013-11-08-scienceday">3rd Science Day</a>,
