S. Berkun: The Dangers of Faith in Data

--- a/science/index.html
+++ b/science/index.html
@@ -1121,6 +1121,11 @@
         <i class="website">Massive</i>, 28.08.2017.
         <!--@@PDF-->
       </li>
+      <li>Berkun, Scott:
+        <a href="http://scottberkun.com/2013/danger-of-faith-in-data/">The Dangers of Faith In Data</a>,
+        <i class="website">Scott Berkun</i>, 22.11.2013. Quote:
+        <q>Faith in data grows in relation to your distance from the collection of it</q>.
+      </li>
     </ul>
 
     <p>Economics:</p>
