--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2187,6 +2187,12 @@
         <a href="https://www.youtube.com/watch?v=-jYmEzq3hLc">Corporate Looting: Sub-Saharan Africa Loses $100B A Year</a>
         (YouTube, 11.02.2018, 15 minutes): interview with Patrick Bond.
       </li>
+      <li>TheRealNews:
+        <a href="https://www.youtube.com/watch?v=rgyMEkrXWXk">Trump’s Budget and Infrastructure Plans Threaten Environment</a>
+        (YouTube, 14.02.2018, 12 minutes): 
+        <q>Sierra Club Executive Director Michael Brune says that both proposals will create more pollution and exacerbate climate change, serving fossil fuel donors' interests at the expense of the environment</q>.
+        The proposed budget also aims to increase military spending even more.
+      </li>
     </ul>
     <!-- 
       * The Ring of Fire: "Trump Wants To Cut Aide To American Children To Pay For Tax Cuts For The Wealthy", 4 minutes, 17.12.2017: https://www.youtube.com/watch?v=6nY-Tul5fYE
