OSF + article Foster & Deardorff

--- a/science/index.html
+++ b/science/index.html
@@ -562,6 +562,14 @@
         <i class="journal">Science</i>, Vol. 349, Issue 6251, aac4716 (28 Aug 2015).
         <!-- see also ResearchGate: https://www.researchgate.net/publication/281286234_Estimating_the_Reproducibility_of_Psychological_Science -->
       </li>
+      <li><abbr title="Open Science Framework">OSF</abbr>:
+        <a href="https://osf.io/ezcuj/wiki/home/">Reproducibility Project: Psychology Wiki</a>.
+        <br />See also:
+        Foster, Erin D.; Deardorff, Ariel:
+        <a href="http://jmla.mlanet.org/ojs/jmla/article/view/88/373">Open Science Framework (<abbr>OSF</abbr>)</a>,
+        <i class="journal">Journal of the Medical Library Association</i>, Volume 105, Number 2, April 2017 
+        (<span lang="en-US">Creative Commons Attribution 4.0 International License</span>).
+      </li>
       <li>
         <a href="https://www.youtube.com/playlist?list=PLMOU-iLiJIc0amNVabGXJ0liKwIwxqkO8">Improving the Reproducibility of Our Research Practices</a>,
         a series of 6 YouTube videos by the Association for Psychological Science (2016).
