Goldhill: Philosophers are buuilding ethical algo...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -240,6 +240,11 @@
         <br />This article is part of a special feature on
         <a href="http://policyoptions.irpp.org/magazines/january-2018/ethical-and-social-dimensions-of-ai/">Ethical and Social Dimensions of <abbr>AI</abbr></a>.
       </li>
+      <li>Goldhill, Olivia:
+        <a href="https://qz.com/1204395/self-driving-cars-trolley-problem-philosophers-are-building-ethical-algorithms-to-solve-the-problem/">Philosophers are building ethical algorithms to help control self-driving cars</a>,
+        <i class="website">Quartz</i>, 11.02.2018.
+        <!--@@PDF-->
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
