Bassan: Scientists shouldn't be punished ...

--- a/science/index.html
+++ b/science/index.html
@@ -570,6 +570,11 @@
         <i class="journal">Journal of the Medical Library Association</i>, Volume 105, Number 2, April 2017 
         (<span lang="en-US">Creative Commons Attribution 4.0 International License</span>).
       </li>
+      <li>Bassan, Jay:
+        <a href="https://massivesci.com/articles/science-correction-pains-compounds/">Scientists shouldn’t be punished for being wrong</a>,
+        <i class="website">Massive</i>, 01.09.2017.
+        <!-- https://twitter.com/massivesci/status/965360271693893638 -->
+      </li>
       <li>
         <a href="https://www.youtube.com/playlist?list=PLMOU-iLiJIc0amNVabGXJ0liKwIwxqkO8">Improving the Reproducibility of Our Research Practices</a>,
         a series of 6 YouTube videos by the Association for Psychological Science (2016).
