How: Can small companies successfully ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -332,6 +332,10 @@
         <i class="blog">KDNuggets blog</i>, August 2017.
         <!--@@what happened to the other parts?-->
       </li>
+      <li>How, Yazmin:
+        <a href="https://www.re-work.co/blog/can-small-companies-successfully-implement-deep-learning">Can small companies successfully implement deep learning?</a>,
+        <i class="blog">Re-Work blog</i>, 04.10.2017.
+      </li>
       <li>Knight, Will:
         <a href="https://www.technologyreview.com/s/609038/chinas-ai-awakening/">China's <abbr>AI</abbr> Awakening</a>,
         <i class="magazine"><abbr>MIT</abbr> Technology Review</i>, 10.10.2017.
