Malliaraki: critical reading list

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -245,6 +245,10 @@
         <i class="website">Quartz</i>, 11.02.2018.
         <!--@@PDF-->
       </li>
+      <li>Malliaraki, Eirini:
+        <i class="booktitle">Toward ethical, transparent and fair <abbr>AI</abbr>/<abbr>ML</abbr>: a critical reading list</i>,
+        <i class="blog">Medium</i>, 19.02.2018 (9-minute read).
+      </li>
     </ul>
 
     <h2><abbr>AI</abbr> Safety</h2>
