Deutsche Gesellschaft für Philosophie

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -881,6 +881,10 @@
         in Pullach near Munich does not teach philosophy but thinking.
         See its <a href="https://www.parmenides-foundation.org/education/">education</a> page.
       </li>
+      <li lang="de">
+        <a href="http://www.dgphil.de/home/" hreflang="de">Deutsche Gesellschaft für Philosophie <abbr>e.V.</abbr></a>.
+        <!--@@soure: http://fv-philosophie-nrw.de/links/ -->
+      </li>
     </ul>
 
     <h3>The Netherlands</h3>
