Shermer: Carl Sagan's baloney detection kit

--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -101,6 +101,12 @@
         <a href="https://www.youtube.com/watch?v=eUB4j0n2UDU">Michael Shermer: Baloney Detection Kit</a>,
         a video by the Richard Dawkins Foundation for Reason &amp; Science.)
       </li>
+      <li>Shermer, Michael:
+        <a href="http://bigthink.com/videos/michael-shermer-basic-questions-for-improving-critical-thinking-skills">Carl Sagan’s baloney detection kit: How to improve your critical thinking skills</a>,
+        <i class="website">Big Think</i>, 24.01.2018. See also
+        <a href="https://www.youtube.com/watch?v=mn7jVTGjb-I">How to detect baloney the Carl Sagan way</a>
+        (YouTube, 24.01.2018, 6 minutes).
+      </li>
       <li>
         <a href="https://www.youtube.com/playlist?list=PLA795AB5BDDD2B0B3">Critical Reasoning for Beginners</a> 
         is a six-part course taught in 2010 
