--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1484,6 +1484,12 @@
         <a href="https://www.theguardian.com/books/2018/feb/11/reason-is-non-negotioable-steven-pinker-enlightenment-now-extract">‘Reason is non-negotiable’: Steven Pinker on the Enlightenment</a>,
         <i class="newspaper">The Guardian</i>, 11.02.2018.
       </li>
+      <li lang="fr">Hansen-Löve, Laurence:
+        <a href="https://la-philosophie.com/pourquoi-les-philosophes-ne-gouverneront" hreflang="fr">Pourquoi les philosophes ne gouverneront plu</a>,
+        <i class="website">La-Philosophie.com</i>, 22.05.2017.
+        <!--@@PDF-->
+        <!--La-Philosophie on Twitter: https://twitter.com/La_Philosophie -->
+      </li>
       <li>Sherwood, Harriet:
         <a href="https://www.theguardian.com/uk-news/2018/jan/17/pakistani-humanist-denied-uk-asylum-after-failing-to-identify-plato">Pakistani humanist denied <abbr>UK</abbr> asylum after failing to identify Plato</a>,
         <i class="newspaper">The Guardian</i>, 17.01.2018.
